[build-system]
requires = ["setuptools>=45", "wheel", "swig"]
build-backend = "setuptools.build_meta"

[project]
name = "speexdsp-ns-vulcanlabs"
version = "0.1.3"
description = "Python bindings of speexdsp noise suppression library (Vulcanlabs fork with multi-platform wheels)"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Lucky Wong", email = "luckyvictor1983@gmail.com"},
    {name = "Vulcanlabs", email = "dev@vulcanlabs.co"}
]
maintainers = [
    {name = "Vulcanlabs", email = "dev@vulcanlabs.co"}
]
keywords = ["speexdsp", "noise suppression", "audio processing", "speech enhancement"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/hiendang7613vulcan/speexdsp-ns-vulcanlabs"
Repository = "https://github.com/hiendang7613vulcan/speexdsp-ns-vulcanlabs"
"Original Source" = "https://github.com/TeaPoly/speexdsp-ns-python"

[tool.setuptools]
packages = ["speexdsp_ns"]
package-dir = {"speexdsp_ns" = "src"}

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux_* *-win*"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
before-all = [
    "yum install -y speexdsp-devel swig || (apt-get update && apt-get install -y libspeexdsp-dev swig)"
]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-all = [
    "brew install speexdsp swig"
]
environment = { LDFLAGS="-L/opt/homebrew/lib -L/usr/local/lib", CPPFLAGS="-I/opt/homebrew/include -I/usr/local/include" }

